Fix broken css in accordion

--- a/profile/src/scss/profile/_accordion.scss
+++ b/profile/src/scss/profile/_accordion.scss
@@ -39,7 +39,7 @@
       display: flex;
       align-items: center;
       flex: 1 1 auto;
-      padding: 0.5em 1em;
+      padding: 0.95em 1em;
       background-color: $blue;
 
       h3 {
